--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,233 +1,44 @@
 <ion-view view-title="Dashboard" cache-view="false" hide-back-button="true">
 
-  <ion-content class="no-header">
-	
-		<div style="padding-top:30%">
-			<ion-tabs class = "tabs-assertive">
-				<ion-tab title="New ">
-					<ion-nav-view name="home-tab">
-			
-						<div class="card" ui-sref="app.view_order">
-						
-							<div class="row">
-							<div class="col s5" style="background-color:#D1CDCC">
-							Adyar
-							</div>				
-							<div class="col s5" style="background-color:#B2A7A5">
-							Manu Alosious</br>
-							Shastri Nagar,Adyar</br>
-							Chennai
-							</div>
-							</div>
-							
-						</div>
-						<div class="card" ui-sref="app.view_order">
-							<div class="row">
-							<div class="col s5" style="background-color:#D1CDCC">
-							Adyar
-							</div>				
-							<div class="col s5" style="background-color:#B2A7A5">
-							Njo Joseph</br>
-							Gandhi Nagar,Adyar</br>
-							Chennai
-							</div>
-							</div>
-						</div>
-						<div class="card" ui-sref="app.view_order">
-						
-							<div class="row">
-							<div class="col s5" style="background-color:#D1CDCC">
-							Adyar
-							</div>				
-							<div class="col s5" style="background-color:#B2A7A5">
-							Manu Alosious</br>
-							Shastri Nagar,Adyar</br>
-							Chennai
-							</div>
-							</div>
-							
-						</div>
-						<div class="card" ui-sref="app.view_order">
-						
-							<div class="row">
-							<div class="col s5" style="background-color:#D1CDCC">
-							Adyar
-							</div>				
-							<div class="col s5" style="background-color:#B2A7A5">
-							Manu Alosious</br>
-							Shastri Nagar,Adyar</br>
-							Chennai
-							</div>
-							</div>
-							
-						</div>
-						<div class="card" ui-sref="app.view_order">
-						
-							<div class="row">
-							<div class="col s5" style="background-color:#D1CDCC">
-							Adyar
-							</div>				
-							<div class="col s5" style="background-color:#B2A7A5">
-							Manu Alosious</br>
-							Shastri Nagar,Adyar</br>
-							Chennai
-							</div>
-							</div>
-							
-						</div>
-	   
-					</ion-nav-view>
-				</ion-tab>
-				<ion-tab title="Accepted">
-					<ion-nav-view name="home-tab">
-			
-						<div class="card" ui-sref="app.view_order">
-							<div class="card" ui-sref="app.view_order">
-							<div class="row">
-							<div class="col s5" style="background-color:#D1CDCC">
-							Adyar
-							</div>				
-							<div class="col s5" style="background-color:#B2A7A5">
-							Lakshmi Menon</br>
-							Gandhi Nagar,Adyar</br>
-							Chennai
-							</div>
-							</div>
-						</div>
-						</div>
-						<div class="card" ui-sref="app.view_order">
-							<div class="card" ui-sref="app.view_order">
-							<div class="row">
-							<div class="col s5" style="background-color:#D1CDCC">
-							Porur
-							</div>				
-							<div class="col s5" style="background-color:#B2A7A5">
-							Anna Jose</br>
-							Gandhi Nagar,Adyar</br>
-							Chennai
-							</div>
-							</div>
-						</div>
-						</div>
-						<div class="card" ui-sref="app.view_order">
-						
-							<div class="row">
-							<div class="col s5" style="background-color:#D1CDCC">
-							Adyar
-							</div>				
-							<div class="col s5" style="background-color:#B2A7A5">
-							Manu Alosious</br>
-							Shastri Nagar,Adyar</br>
-							Chennai
-							</div>
-							</div>
-							
-						</div>
-						<div class="card" ui-sref="app.view_order">
-						
-							<div class="row">
-							<div class="col s5" style="background-color:#D1CDCC">
-							Adyar
-							</div>				
-							<div class="col s5" style="background-color:#B2A7A5">
-							Manu Alosious</br>
-							Shastri Nagar,Adyar</br>
-							Chennai
-							</div>
-							</div>
-							
-						</div>
-						<div class="card" ui-sref="app.view_order">
-						
-							<div class="row">
-							<div class="col s5" style="background-color:#D1CDCC">
-							Adyar
-							</div>				
-							<div class="col s5" style="background-color:#B2A7A5">
-							Manu Alosious</br>
-							Shastri Nagar,Adyar</br>
-							Chennai
-							</div>
-							</div>
-							
-						</div>
-	   
-					</ion-nav-view>
-				</ion-tab>
-				<ion-tab title="Delivered">
-					<ion-nav-view name="home-tab">
-			
-						<div class="card" ui-sref="app.view_order">
-							<div class="card" ui-sref="app.view_order">
-							<div class="row">
-							<div class="col s5" style="background-color:#D1CDCC">
-							Velacherry
-							</div>				
-							<div class="col s5" style="background-color:#B2A7A5">
-							Arun Dev</br>
-							Gandhi Nagar,Adyar</br>
-							Chennai
-							</div>
-							</div>
-						</div>
-						</div>
-						<div class="card" ui-sref="app.view_order">
-							<div class="card" ui-sref="app.view_order">
-							<div class="row">
-							<div class="col s5" style="background-color:#D1CDCC">
-							Adyar
-							</div>				
-							<div class="col s5" style="background-color:#B2A7A5">
-							Santhosh Joseph</br>
-							Gandhi Nagar,Adyar</br>
-							Chennai
-							</div>
-							</div>
-						</div>
-						</div>
-						<div class="card" ui-sref="app.view_order">
-						
-							<div class="row">
-							<div class="col s5" style="background-color:#D1CDCC">
-							Adyar
-							</div>				
-							<div class="col s5" style="background-color:#B2A7A5">
-							Manu Alosious</br>
-							Shastri Nagar,Adyar</br>
-							Chennai
-							</div>
-							</div>
-							
-						</div>
-						<div class="card" ui-sref="app.view_order">
-						
-							<div class="row">
-							<div class="col s5" style="background-color:#D1CDCC">
-							Adyar
-							</div>				
-							<div class="col s5" style="background-color:#B2A7A5">
-							Manu Alosious</br>
-							Shastri Nagar,Adyar</br>
-							Chennai
-							</div>
-							</div>
-							
-						</div>
-	   
-					</ion-nav-view>
-				</ion-tab>
-
-		  
-
-
-		  </ion-tabs>
-	  
+  <ion-content overflow-scroll="true">
+	<div style="height:10%;background-color:black">
+	</div>
+	<div style="">
+		<div>
+			<h2 style="text-align:center">Orders</h2>
+		</div>
+		<div class="row">
+			<div class="col col-50">
+				<h3 style="text-align:center">Origin</h3>
+			</div>
+			<div class="col col-50">
+				<h3 style="text-align:center">Destination</h3>
+			</div>
+		</div>
+	</div>
+	<div ng-repeat="order in order_details">
+		<div class="row" ui-sref="app.view_order({order_id : order.id})">
+			<div class="col col-40" style="background-color:#D1CDCC">
+				{{order.restaurant_name}}
+			</div>	
+			<div class="col col-20" style="background-color:#B2A7A5">
+				<div class="row">
+				COD
+				</div>
+				<div class="row" style="padding-bottom:0px">
+				<button>{{order.totalamount}}</button>
+				</div>
+			</div>
+			<div class="col col-40" style="background-color:#D4CDCC">
+				{{order.address}}
+				</div>
+		</div>	
+		<div style="height:2%;">
+		</div>
+		
+		
 	
 	</div>
-	
- 
-	
-	
 
   
   
