--- a/www/templates/notification.html
+++ b/www/templates/notification.html
@@ -11,7 +11,7 @@
     <span ng-click="reject_order()">Reject</span>
   </div>
   <div class="col col-50 " align="center">
-    <span ng-click="accept_order()" >Accept</span>
+    <span ng-click="accept_order()" >Proceed</span>
   </div>
 </div>
 
