--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -10,12 +10,12 @@
 				<div class="sign-in-htm">
 					<form name="login_form" ng-submit="user_login1(logindata)">
 						<div class="group">
-						  <label for="user" class="label">Username</label>
-						  <input id="user" type="text" class="input" maxlength="30" ng-model="logindata.emailid">
+						  <label for="user" class="label">Email</label>
+						  <input id="user" type="email" class="input" maxlength="30" ng-model="logindata.emailid">
 						</div>
 						<div class="group">
-						  <label for="pass" class="label">Mobile Number</label>
-						  <input  type="tel" class="input" maxlength="15"  ng-model="logindata.password">
+						  <label for="pass" class="label">Password</label>
+						  <input  type="password" class="input" maxlength="15"  ng-model="logindata.password">
 						</div>
 						
 						<div class="group">
