--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -56,10 +56,10 @@
         	<i class="icon ion-android-call"></i>
           Contact Us
         </ion-item>
-		<ion-item  menu-close   class="item-icon-left" ui-sref="app.notification">
+		<!--<ion-item  menu-close   class="item-icon-left" ui-sref="app.notification">
         	<i class="icon ion-android-call"></i>
           ACcept/reject
-        </ion-item>
+        </ion-item>-->
             </ion-list>
     </ion-content>
   </ion-side-menu>
