--- a/www/templates/forgot_password.html
+++ b/www/templates/forgot_password.html
@@ -1,7 +1,7 @@
 <ion-modal-view cache-view="false">
 <ion-nav-bar class="bar-royal">
 		<ion-nav-title>
-			Forget Password
+			Forgot Password
 		</ion-nav-title>
 		<ion-nav-buttons side="right">
       	<button class="button button-icon button-clear ion-close-round" ng-click="closeModal()">
