--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -24,7 +24,7 @@
 					</form>
 					<div class="group">
 						 
-						 <button ion-button class="forget_button" style="float: right;" ng-click="open_forget_pwd()">Forget Password ?</button></br></br>
+						 <button ion-button class="forget_button" style="float: right;" ng-click="open_forget_pwd()">Forgot Password ?</button></br></br>
 						 
 						</div>
 					<div class="hr"></div>
