--- a/www/templates/rank.html
+++ b/www/templates/rank.html
@@ -1,5 +1,22 @@
 <ion-view view-title="Ranking">
   <ion-content>
+  
+  <div class="row" style="padding-top:40%">
+  
+	<div class="col col-50">
+		
+		<img src="img/up.jpg">
+		<h2>75 Likes</h2>
+		
+	</div>
+	<div class="col col-50">
+	
+		<img src="img/down.jpg">
+		<h2>10 Dislikes</h2>
+	
+	</div>
+  
+  </div>
     
   </ion-content>
 </ion-view>
