--- a/www/css/style.css
+++ b/www/css/style.css
@@ -330,3 +330,160 @@ padding-bottom:55px;
 {
 	font-size: 13px !important;
 }
+.dash_title {
+  padding: 20px 20px 0px 20px;
+  text-align: center;
+  font-family: "Segoe UI";
+  font-weight: bold; }
+
+.dash_content_left {
+  width: 50%;
+  padding: 20px 50px 50px 10px;
+  float: left;
+  font-size: 16px;
+  text-align: left;
+  background: #424242;
+  color: #D2D2D2; }
+
+.dash_content_right {
+  width: 50%;
+  padding: 20px 10px 50px 50px;
+  float: left;
+  font-size: 14px;
+  text-align: right;
+  background: #333333;
+  color: #D2D2D2; }
+
+.dash_cont_img {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  top: 50%;
+  transform: translateY(-100%); }
+
+.dash_cont_btn {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  top: 50%;
+  transform: translateY(20%);
+  width: 100px; }
+
+.dash_rows {
+  position: relative;
+  padding: initial;
+  border-bottom: 6px solid #D2D2D2; }
+  
+  .no_padding {
+  padding: initial; }
+
+.info_col {
+  font-size: 12px;
+  padding-left: 10px;
+  background: #F2F2F2;
+  position: relative; }
+
+.info_heading {
+  margin: 2px 0px; }
+
+.left_pane {
+  position: relative;
+  background: #29ABE2; }
+
+.left_pane_info {
+  font-size: 30px;
+  position: absolute;
+  left: 40%;
+  right: 0;
+  margin: 0 auto;
+  top: 50%;
+  transform: translateY(-50%);
+  color: white; }
+
+.left_pane_bottom {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  background: #6A1B9A;
+  color: white; }
+
+.left_pane_bottom i {
+  padding: 2% 40% 0px;
+  color: white;
+  font-size: 30px; }
+
+.left_pane_bottom h6 {
+  text-align: center;
+  color: white; }
+
+.info_content {
+  margin: 10px 0px; }
+
+.float_bar {
+  position: absolute;
+  z-index: 10;
+  width: 70px;
+  background: #F2F2F2;
+  text-align: center;
+  padding: 0px 15px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  transform: translate(-50%, 0%); }
+
+.float_bar i {
+  font-size: 40px; }
+
+.map_container {
+  position: relative; }
+
+.btn_container {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translate(0%, 20%); }
+
+.gmnoprint, .gm-style-cc, .gm-style div:nth-child(2) {
+  display: none; }
+
+	  
+
+.button_style {
+    background-color: #f44336; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+	width:200px;
+}
+.pofile_img img{
+	margin: 20px 30px 0px;
+}
+
+.pofile_img p{
+	text-align: center;
+	padding: 5%;
+	font-size: 13px;
+}
+
+.pofile_img {
+	color: black;
+	
+	border-bottom: 1px solid white;
+}
+.order_list {
+  background: white;
+   }
+
+
+.order_list img {
+  margin-top: 5%; }
+
+
+.order_list i {
+  font-size: 20px !important; }
