--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Profile" cache-view="false" hide-back-button="true">
+<ion-view view-title="Profile" cache-view="false">
   <ion-content overflow-scroll="true">
     
 	<div style="height:50%;">
@@ -68,7 +68,7 @@
 			</div>
 		</div>
 	</label>
-	<label class="item-input item-stacked-label row-bottom-border">
+	<!--<label class="item-input item-stacked-label row-bottom-border">
 		<div class="row">
 			<div class="col col-80">
 				<h5> {{profileinfo.address}}</h5>
@@ -77,7 +77,7 @@
 				<img src="img/address.jpg" width="30" height="30">
 			</div>
 		</div>
-	</label>
+	</label>-->
 <!--	<label class="item-input item-stacked-label row-bottom-border">
 		<div class="row">
 			<div class="col col-80">
